--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.14.202",
     "@types/morgan": "^1.9.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "eslint": "^8.57.0",
@@ -28,6 +29,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "morgan": "^1.10.0"
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
+    "query-types": "^0.1.4"
   }
 }
